[package]
name = "apool"
description = "Async generic pool crate for rust"
version = "0.1.3"
edition = "2018"
authors = ["post-rex <post-rex@pm.me>"]
license = "Apache-2.0"
homepage = "https://github.com/post-rex/apool"
repository = "https://github.com/post-rex/apool"
documentation = "https://docs.rs/apool"
readme = "README.md"

[dependencies]
smallvec = "1.6.1"

[dependencies.tokio]
version = "1.10.0"
features = ["rt", "sync"]
optional = true

[features]
default = ["tokio"]

